@@ -1,3 +1,10 @@
+2006-08-27  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c:
+	* src/baobab-utils.[ch]:
+
+	do not crash if toolbar style can't be retrieved from GConf.
+
 2006-08-15  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-utils.c: load the white pixbuf just once instead
